# neural-networks-project-1

./: .gitignore  LICENSE  README.md  evaluate.py  pyproject.toml  pyrightconfig.json  sweep_config.yaml
.github/workflows/: pyright.yml
app/: main.py
classification/: cifar_zeroshot.py
data/: DataLoader.py  coco_dataset.py
data_exploration/: data_exploration.ipynb  main.ipynb
datasets/: coco_dataset.py  flickr30k_dataset.py  transforms.py
models/: Visual_Encoders.py  clip.py  contrastive_model.py  dummy.py  inferencer.py  projection.py  retrieval.py  text_encoder.py  visual_encoder.py  visual_encoders.py
notebooks/: embedding_visualization.ipynb
torch_datasets/: coco_dataset.py  flickr30k_dataset.py  flickr8k_dataset.py  transforms.py
training/: __init__.py  checkpointing.py  config.py  flickr_eval.py  loss.py  metrics.py  train.py  trainer.py
training/configs/: __init__.py  aug_abl_config.py  base_config.py  baseline_config.py  both_frozen_exp_config.py  distilroberta_abl_config.py  embed_128_abl_config.py  embed_256_abl_config.py  final_model_config.py  fixed_temp_abl_config.py  high_res.py  resnet34_abl_config.py  resnet50_abl_config.py  text_frozen_exp_config.py  vision_frozen_exp_config.py
utils/: profile_model.py  profiler.py
