[project]
name = "neural-networks-project-1"
version = "0.1.0"
description = "Multimodal classification: text + image data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "wandb>=0.25.0",
]
