[project]
name = "neural-networks-project-1"
version = "0.1.0"
description = "Multimodal classification: text + image data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "wandb>=0.25.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

# Enable basic checks and import sorting
lint.select = [
    "E",   # All errors
    "F",   # All pyflakes checks (including unused imports)
    "I",   # Import sorting checks
    "B",   # All flake8-bugbear checks
    "ANN", # All flake8-annotations checks
]

# Ignore line length violations.
ignore = ["E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files.
"__init__.py" = ["F401"]
